# tarea_02_1910234

./: .gitignore  README.md  package-lock.json  vite.config.js
OpenGL/: CMakeLists.txt  README.md  triangle.cpp
Three/: README.md  index.html  package-lock.json  package.json  three.js  triangle.js  vite.config.js
Three/src/: index.html  triangle.js
WebGL2/: README.md  package-lock.json  package.json
WebGL2/src/: index.html  triangle.js
